# fp3

./: .fourmolu.yaml  .hlint.yaml  LICENSE  README.md  fp-lab3.cabal
.github/workflows/: ci.yml
src/: App.hs  Interpolation.hs  Main.hs  Types.hs
tests/: Test.hs
